# hicamera_driver_py

./: .gitignore  CMakeLists.txt  Makefile  demo1-basics.ipynb  demo2-synchronized.ipynb  readme.md  test.py
hik_driver/: __init__.py  timer.py  utils.py
hik_driver_py/: utils.py
hik_driver_py/SDK/: MvCameraControl_class.py
include/: constants.h  frame.h  timer.h  utils.h
src/: Makefile  main.cpp  timer.cpp  utils.cpp
